services partially done

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
             <div>
                 <div>
                     <h3>Web Development<i class="fa-solid fa-code fa-3x"></i></h3>
-                    <p>Web development is my main skill, I have experience in HTML, CSS, JavaScript, PHP, SQL, Python, C++ and
-                        Linux.</p>
-                    </div>
-                    <div>
-                    
+                    <p>Web development is my main skill, I have experience in HTML, CSS, JavaScript, PHP, SQL, Python,
+                        C++ and Linux.</p>
+                </div>
+                <div>
+
                     <h3>UI/UX Design<i class="fa-solid fa-pen-nib fa-3x"></i></h3>
                     <p>As a web developer I must take care of UI and UX, in order to make an appealing web page</p>
                 </div>
@@ -236,7 +236,37 @@
                 </div>
             </div>
         </section>
-        <section id="hire"></section>
+        <section id="hire">
+            <h2>Testimonies</h2>
+            <div>
+                <div class="card">
+                    <img src="./imagenesProyecto1/empresa1.jpeg" alt="img-empresa1">
+                    <div class="card--info">
+                    <h3>Empresa 1</h3>
+                    <p>He is a very responsible person, he is always willing to help and he is very good at what he
+                        does.
+                        He is a very good team player and he is always willing to learn new things.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./imagenesProyecto1/empresa2.jpeg" alt="img-empresa2">
+                    <div class="card--info"> 
+                    <h3>Empresa 2</h3>
+                    <p>“I have worked with Jay for a year and I can say that he is a very responsible person, he is
+                        always willing to help and he is very good at what he does. I recommend him 100%”</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./imagenesProyecto1/empresa3.jpeg" alt="img-empresa3">
+                    <div class="card--info">
+                        <h3>Empresa 3</h3>
+                        <p>For as long as he's been working with us, he has shown the good manners and straightforwardness the situation
+                            might require.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="contacto"></section>
     </main>
 
