--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
                     <img src="./imagenesProyecto1/empresa2.jpeg" alt="img-empresa2">
                     <div class="card--info"> 
                     <h3>Empresa 2</h3>
-                    <p>“I have worked with Jay for a year and I can say that he is a very responsible person, he is
-                        always willing to help and he is very good at what he does. I recommend him 100%”</p>
+                    <p>“I have worked with Juan Carlos for a year and I can say that he is a very responsible person, he is
+                        always willing to help and he is very good at what he does.
+                        I recommend him 100%”</p>
                     </div>
                 </div>
                 <div class="card">
@@ -262,6 +263,7 @@
                         <h3>Empresa 3</h3>
                         <p>For as long as he's been working with us, he has shown the good manners and straightforwardness the situation
                             might require.
+                            It's been a pleasure to work with him.</p>
                         </p>
                     </div>
                 </div>
