intento de arreglar logo

--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 <body>
     <aside>
         <ul>
-            <li><a href="https://www.linkedin.com/in/juan-carlos-ram%C3%ADrez-guerrero-213020239/" target="_blank"><img
-                        src="./imagenesProyecto1/linke.png" alt="img-linkedin"></a></li>
-            <li><a href="https://github.com/JayCrg/" target="_blank"><img src="./imagenesProyecto1/git.png"
-                        alt="img-github"></a></li>
-            <li><a href="https://twitter.com/JuanCa_Jr" target="_blank"><img src="./imagenesProyecto1/twit.png"
-                        alt="img-twitter"></a>
+            <li><a href="https://www.linkedin.com/in/juan-carlos-ram%C3%ADrez-guerrero-213020239/" target="_blank">
+                <i class="fa-brands fa-linkedin fa-3x"></i></a></li>
+            <li><a href="https://github.com/JayCrg/" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a></li>
+            <li><a href="https://twitter.com/JuanCa_Jr" target="_blank"><i class="fa-brands fa-twitter fa-3x"></i></a>
             </li>
         </ul>
     </aside>
