--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="animations.css">
     <link rel="stylesheet" href="media-queries.css">
     <script src="https://kit.fontawesome.com/bfe47c94ff.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="code.js"></script>
 </head>
 
