falta botón de menu

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <nav>
                 <div class="checkbtn">
                     <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
+                        <span class="line line1">a</span>
+                        <span class="line line2">b</span>
+                        <span class="line line3">c</span>
                     </div>
                 </div>
                 <ul>
@@ -55,12 +55,12 @@
                 <h1>Hello there, I'm Juan Carlos</h1>
                 <h2>Full Stack Developer</h2>
             </div>
-            <img src="./imagenesProyecto1/fullStack.png" alt="img-FullStack">
+            <img src="./imagenesProyecto1/fullStack.png" alt="Imagen de Presentación con diferentes lenguages de programación">
         </section>
         <section id="about">
             <h2>About Me</h2>
             <div>
-                <img src="./imagenesProyecto1/champ.jpg" alt="foto-de-perfil" id="rotacion">
+                <img src="./imagenesProyecto1/champ.jpg" alt="Foto de perfil en redes sociales" id="rotacion">
                 <div id="presentacion">
                     <p>Hello everyone, my name is Juan Carlos and I'm <span id="edad">21</span> </p>
                     <p>I'm currently studying Web App Development in Granada and this page shall serve as a record of
@@ -79,45 +79,45 @@
                     <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank">
                         <div class="titulo-skills">
                             <h4>HTML5</h4>
-                            <img src="./imagenesProyecto1/html5.png" alt="img-HTML5">
+                            <img src="./imagenesProyecto1/html5.png" alt="HTML5">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="html--animation" class="skills">
-                            <p class="p_percentage p_animation">85%</p>
+                            <p>85%</p>
                         </div>
                     </div>
                     <a href="https://www.w3schools.com/css/default.asp" target="_blank">
                         <div class="titulo-skills">
                             <h4>CSS3</h4>
-                            <img src="./imagenesProyecto1/css3.png" alt="img-CSS3">
+                            <img src="./imagenesProyecto1/css3.png" alt="CSS3">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="css--animation" class="skills">
-                            <p class="p_percentage p_animation">50%</p>
+                            <p>50%</p>
                         </div>
                     </div>
                     <a href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="_blank">
                         <div class="titulo-skills">
                             <h4>JavaScript</h4>
-                            <img src="./imagenesProyecto1/js.png" alt="img-JS">
+                            <img src="./imagenesProyecto1/js.png" alt="JS">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="js--animation" class="skills">
-                            <p class="p_percentage p_animation">90%</p>
+                            <p>90%</p>
                         </div>
                     </div>
                     <a href="https://www.php.net/manual/es/intro-whatis.php" target="_blank">
                         <div class="titulo-skills">
                             <h4>PHP</h4>
-                            <img src="./imagenesProyecto1/php.png" alt="img-PHP">
+                            <img src="./imagenesProyecto1/php.png" alt="PHP">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="php--animation" class="skills">
-                            <p class="p_percentage p_animation">80%</p>
+                            <p>80%</p>
                         </div>
                     </div>
                 </div>
@@ -125,45 +125,45 @@
                     <a href="https://www.linux.org/" target="_blank">
                         <div class="titulo-skills">
                             <h4>Linux</h4>
-                            <img src="./imagenesProyecto1/linux.png" alt="img-Linux">
+                            <img src="./imagenesProyecto1/linux.png" alt="Linux">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="linux--animation" class="skills">
-                            <p class="p_percentage p_animation">60%</p>
+                            <p>60%</p>
                         </div>
                     </div>
                     <a href="https://www.w3schools.com/cpp/cpp_constructors.asp" target="_blank">
                         <div class="titulo-skills">
                             <h4>C++</h4>
-                            <img src="./imagenesProyecto1/c++.png" alt="img-C++">
+                            <img src="./imagenesProyecto1/c++.png" alt="C++">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="c--animation" class="skills">
-                            <p class="p_percentage p_animation">70%</p>
+                            <p>70%</p>
                         </div>
                     </div>
                     <a href="https://dev.mysql.com/doc/" target="_blank">
                         <div class="titulo-skills">
                             <h4>SQL</h4>
-                            <img src="./imagenesProyecto1/sql.png" alt="img-SQL">
+                            <img src="./imagenesProyecto1/sql.png" alt="SQL">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="sql--animation" class="skills">
-                            <p class="p_percentage p_animation">90%</p>
+                            <p>90%</p>
                         </div>
                     </div>
                     <a href="https://www.python.org/doc/" target="_blank">
                         <div class="titulo-skills">
                             <h4>Python</h4>
-                            <img src="./imagenesProyecto1/python.png" alt="img-Python">
+                            <img src="./imagenesProyecto1/python.png" alt="Python">
                         </div>
                     </a>
                     <div class="progress-bar">
                         <div id="python--animation" class="skills">
-                            <p class="p_percentage p_animation">90%</p>
+                            <p>90%</p>
                         </div>
                     </div>
                 </div>
@@ -174,32 +174,32 @@
             <div>
                 <div>
                     <a href="https://github.com/JayCrg/HangmanGame"><img src="./imagenesProyecto1/ahorcado.png"
-                            alt="img-juegoAhorcado"></a>
+                            alt="Imagen con enlace al juego del Ahorcado"></a>
                     <h3>Hangman Game</h3>
                 </div>
                 <div>
                     <a href="https://github.com/JayCrg/GroceryBud"><img src="./imagenesProyecto1/grocery.png"
-                            alt="img-listaCompra"></a>
+                            alt="Imagen con enlace al juego de la lista de la compra"></a>
                     <h3>Grocery List</h3>
                 </div>
                 <div>
                     <a href="https://github.com/JayCrg/CardPairs-Game"><img src="./imagenesProyecto1/cards.png"
-                            alt="img-paresCartas"></a>
+                            alt="Imagen con enlace al juego del juego de cartas"></a>
                     <h3>Card Pairs Game</h3>
                 </div>
                 <div>
                     <a href="https://github.com/JayCrg/PongGame"><img src="./imagenesProyecto1/pong.png"
-                            alt="img-pong"></a>
+                            alt="Imagen con enlace al juego del Pong"></a>
                     <h3>Pong Game</h3>
                 </div>
                 <div>
                     <a href="https://github.com/JayCrg/LittleClassRoomManagement"><img
-                            src="./imagenesProyecto1/classrom.png" alt="img-classroom"></a>
+                            src="./imagenesProyecto1/classrom.png" alt="Imagen con enlace al proyecto de gestor de escuela"></a>
                     <h3>Little Classroom Management</h3>
                 </div>
                 <div>
                     <a href="https://github.com/JayCrg/JuegoColores"><img src="./imagenesProyecto1/colors.png"
-                            alt="img-juegoColores"></a>
+                            alt="Imagen con enlace al juego de adivinar colores en base a su RGB"></a>
                     <h3>Colors Game</h3>
                 </div>
             </div>
@@ -243,7 +243,7 @@
             <h2>Testimonies</h2>
             <div>
                 <div class="card">
-                    <img src="./imagenesProyecto1/empresa1.jpeg" alt="img-empresa1">
+                    <img src="./imagenesProyecto1/empresa1.jpeg" alt="empresa1">
                     <div class="card--info">
                     <h3>Empresa 1</h3>
                     <p>He is a very responsible person, he is always willing to help and he is very good at what he
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./imagenesProyecto1/empresa2.jpeg" alt="img-empresa2">
+                    <img src="./imagenesProyecto1/empresa2.jpeg" alt="empresa2">
                     <div class="card--info"> 
                     <h3>Empresa 2</h3>
                     <p>“I have worked with Juan Carlos for a year and I can say that he is a very responsible person, he is
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./imagenesProyecto1/empresa3.jpeg" alt="img-empresa3">
+                    <img src="./imagenesProyecto1/empresa3.jpeg" alt="empresa3">
                     <div class="card--info">
                         <h3>Empresa 3</h3>
                         <p>For as long as he's been working with us, he has shown the good manners and straightforwardness the situation
