boton hecho... olee

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <aside>
         <ul>
             <li><a href="https://www.linkedin.com/in/juan-carlos-ram%C3%ADrez-guerrero-213020239/" target="_blank">
-                <i class="fa-brands fa-linkedin fa-3x"></i></a></li>
+                    <i class="fa-brands fa-linkedin fa-3x"></i></a></li>
             <li><a href="https://github.com/JayCrg/" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a></li>
             <li><a href="https://twitter.com/JuanCa_Jr" target="_blank"><i class="fa-brands fa-twitter fa-3x"></i></a>
             </li>
@@ -34,9 +34,9 @@
             <nav>
                 <div class="checkbtn">
                     <div class="hamburger-lines">
-                        <span class="line line1">a</span>
-                        <span class="line line2">b</span>
-                        <span class="line line3">c</span>
+                        <span class="line line1">&nbsp;</span>
+                        <span class="line line2">&nbsp;</span>
+                        <span class="line line3">&nbsp;</span>
                     </div>
                 </div>
                 <ul>
@@ -55,7 +55,8 @@
                 <h1>Hello there, I'm Juan Carlos</h1>
                 <h2>Full Stack Developer</h2>
             </div>
-            <img src="./imagenesProyecto1/fullStack.png" alt="Imagen de Presentación con diferentes lenguages de programación">
+            <img src="./imagenesProyecto1/fullStack.png"
+                alt="Imagen de Presentación con diferentes lenguages de programación">
         </section>
         <section id="about">
             <h2>About Me</h2>
@@ -194,7 +195,8 @@
                 </div>
                 <div>
                     <a href="https://github.com/JayCrg/LittleClassRoomManagement"><img
-                            src="./imagenesProyecto1/classrom.png" alt="Imagen con enlace al proyecto de gestor de escuela"></a>
+                            src="./imagenesProyecto1/classrom.png"
+                            alt="Imagen con enlace al proyecto de gestor de escuela"></a>
                     <h3>Little Classroom Management</h3>
                 </div>
                 <div>
@@ -245,26 +247,28 @@
                 <div class="card">
                     <img src="./imagenesProyecto1/empresa1.jpeg" alt="empresa1">
                     <div class="card--info">
-                    <h3>Empresa 1</h3>
-                    <p>He is a very responsible person, he is always willing to help and he is very good at what he
-                        does.
-                        He is a very good team player and he is always willing to learn new things.</p>
+                        <h3>Empresa 1</h3>
+                        <p>He is a very responsible person, he is always willing to help and he is very good at what he
+                            does.
+                            He is a very good team player and he is always willing to learn new things.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./imagenesProyecto1/empresa2.jpeg" alt="empresa2">
-                    <div class="card--info"> 
-                    <h3>Empresa 2</h3>
-                    <p>“I have worked with Juan Carlos for a year and I can say that he is a very responsible person, he is
-                        always willing to help and he is very good at what he does.
-                        I recommend him 100%”</p>
+                    <div class="card--info">
+                        <h3>Empresa 2</h3>
+                        <p>“I have worked with Juan Carlos for a year and I can say that he is a very responsible
+                            person, he is
+                            always willing to help and he is very good at what he does.
+                            I recommend him 100%”</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./imagenesProyecto1/empresa3.jpeg" alt="empresa3">
                     <div class="card--info">
                         <h3>Empresa 3</h3>
-                        <p>For as long as he's been working with us, he has shown the good manners and straightforwardness the situation
+                        <p>For as long as he's been working with us, he has shown the good manners and
+                            straightforwardness the situation
                             might require.
                             It's been a pleasure to work with him.</p>
                         </p>
@@ -275,17 +279,19 @@
         <section id="contacto">
             <h2>Contact</h2>
             <div>
-                    <label for="name">Your Name</label>
-                    <input type="text" name="name" required/>
-                    <label for="email">Your Email</label>
-                    <input type="email" name="email" placeholder="myemail9@example.example(.es)" required pattern="[a-zA-Z0-9!#$%&'*\/=?^_`{|}~+-]([\.]?[a-zA-Z0-9!#$%&'*\/=?^_`{|}~+-])+@[a-zA-Z0-9]([^@&%$/()=?¿!.,:;]|\d)+[a-zA-Z0-9][\.][a-zA-Z]{2,6}([\.][a-zA-Z]{2})?"/>
-                    <label for="subject">Subject</label>
-                    <input type="text" name="subject" required/>
-                    <label for="message">Your Message</label>
-                    <textarea name="message" id="" cols="30" rows="10" placeholder="What's the matter?"></textarea>
-                    <button>Submit</button>
+                <label for="name">Your Name</label>
+                <input type="text" name="name" required />
+                <label for="email">Your Email</label>
+                <input type="email" name="email" placeholder="myemail9@example.example(.es)" required
+                    pattern="[a-zA-Z0-9!#$%&'*\/=?^_`{|}~+-]([\.]?[a-zA-Z0-9!#$%&'*\/=?^_`{|}~+-])+@[a-zA-Z0-9]([^@&%$/()=?¿!.,:;]|\d)+[a-zA-Z0-9][\.][a-zA-Z]{2,6}([\.][a-zA-Z]{2})?" />
+                <label for="subject">Subject</label>
+                <input type="text" name="subject" required />
+                <label for="message">Your Message</label>
+                <textarea name="message" id="" cols="30" rows="10" placeholder="What's the matter?"></textarea>
+                <button>Submit</button>
             </div>
         </section>
     </main>
 </body>
+
 </html>
