--- a/index.html
+++ b/index.html
@@ -281,6 +281,8 @@
             <div>
                 <label for="name">Your Name</label>
                 <input type="text" name="name" required />
+                <label for="phone">Your Phone Number</label>
+                <input type="tel" name="phone" pattern="[0-9]{9}" required />
                 <label for="email">Your Email</label>
                 <input type="email" name="email" placeholder="myemail9@example.example(.es)" required
                     pattern="[a-zA-Z0-9!#$%&'*\/=?^_`{|}~+-]([\.]?[a-zA-Z0-9!#$%&'*\/=?^_`{|}~+-])+@[a-zA-Z0-9]([^@&%$/()=?¿!.,:;]|\d)+[a-zA-Z0-9][\.][a-zA-Z]{2,6}([\.][a-zA-Z]{2})?" />
